# tfg-kpm

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml
.github/workflows/: CI.yml  release.yml  testpypiworkflow.yml
src/tfg_kpm/: app.py
src/tfg_kpm/commands/: manager.py
src/tfg_kpm/core/: errors.py  package.py  utils.py
