[project]
name = "tfg-kpm"
version = "2.0.1"
description = "The first package manager for terrafirmagreg addons."
authors = [{name = "glitch714"}]
readme = "README.md"
requires-python = ">=3.14"
license = "CC-BY-NC-SA-4.0"
license-files = ["LICENSE"]
dependencies = ["typer==0.24.1", "click==8.3.1", "rich==14.3.3", "requests==2.33.0", "tomlkit==0.14.0"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.14"
]


[project.urls]
Documentation = "https://tfg-kpm.glitchpdev.com"
Repository = "https://github.com/glitchplaysgames714/tfg-kpm"
Issues = "https://github.com/glitchplaysgames714/tfg-kpm/issues"

[project.scripts]
tfg-kpm = "tfg_kpm.app:app"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "tfg_kpm"
module-root = "src"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E203"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false